--- a/BeerApp - Senior/public/manifest.json
+++ b/BeerApp - Senior/public/manifest.json
@@ -1,6 +1,7 @@
 {
   "short_name": "BW",
   "name": "BeerWiki",
+  "description": "A beer list application",
   "icons": [
     {
       "src": "favicon.ico",
@@ -16,7 +17,14 @@
       "src": "logo512.png",
       "type": "image/png",
       "sizes": "512x512"
+    },
+     {
+      "src": "maskable_icon_x192.png",
+      "type": "image/png",
+      "sizes": "192x192",
+      "purpose": "any maskable"
     }
+
   ],
   "start_url": ".",
   "display": "standalone",
